--- a/styles.css
+++ b/styles.css
@@ -20,13 +20,25 @@ h1{
     background-color: gray;
     width: 100%;
     height: 150px;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+
 }
 
 
 .buttons{
-    width: 50px;
-    height: 50px;
+    width: 100%;
+    height: 60vh;
     background-color: black;
     z-index: 3;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4,1fr);
 }
 
+.AC {
+    grid-row: 4;
+    grid-column: 1/2; 
+}
